# 100-Days-of-Python

./: .gitignore  contacts.csv  converted_data.csv  log.txt  notes_vault.json  pyproject.toml  vault.key  youtube_comments.csv
02_Data_types/: chapter_1.py  chapter_10.py  chapter_11.py  chapter_2.py  chapter_3.py  chapter_4.py  chapter_5.py  chapter_6.py  chapter_7.py  chapter_8.py  chapter_9.py
03_Conditionals/: age_verificaiton.py  age_verification.py  delivery_fees.py  discount.py  snack_suggestion.py  thermostat_alert_system.py  ticket_info_system.py
04_Loops/: 02_multiplication_table.py  03_tea_order.py  04_tea_menu.py  05_order_summary.py  06_tea_heating.py  07_out_of_order.py  08_for_else.py  09_warlus.py  10_dictionaries.py
05_Functions/: 01_duplication.py  02_split_complex_task.py  03_hide_details.py  04_readability.py  05_traceability.py  06_scopes_name_resolution.py  07_local_non_local.py  08_global_scope.py  09_input_params.py  10_invoice_gen.py  11_multiple_return.py  12_lamba_pure_impure.py  12_lambda_pure_impure.py  13_built_in.py  14_imports.py  15_args_kwargs.py  16_map_reduce_filter.py  17_m_f_r_vs_list_comprehensions.py  Order Invoice Generator.txt
06_chai_business/: main.py
07_comprehensions/: 02_sets_comp.py  03_dictionary_comp.py  04_generator_comp.py  05_smart_inventory.py  list_comp.py  sets_comp.py
08_generators/: 01_gen_with_yield.py  02_infinite_gen.py  03_send_value_to_gen.py  04_yield_from.py  05_smart_token_dispenser.py  06_send_multiple_values_to_gen.py
09_decorators/: 01_basics.py  02_logger.py  03_auth.py  04_Caching.py  (+1 more)
(+190 files in other folders)
