[project]
name = "100-days-of-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "cryptography>=46.0.2",
    "fitz>=0.0.1.dev2",
    "flask>=3.1.2",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "psutil>=7.1.0",
    "pydantic>=2.11.10",
    "requests>=2.32.5",
    "schedule>=1.2.2",
    "scikit-learn>=1.7.2",
    "streamlit>=1.50.0",
    "watchdog>=6.0.0",
    "wget>=3.2",
]
